fix a bug about encode